--- a/src/component/navbarStyles.css
+++ b/src/component/navbarStyles.css
@@ -414,81 +414,74 @@ span{
     width: 100%;
     
 }
-.project-outer
-{
+.project-outer {
     width: 100%;
     height: auto;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 0px;
+    gap: 20px; /* Add some space between cards */
     flex-wrap: wrap;
     margin-top: 12em;
-  
 }
 
-.project1{
+.project1 {
     background: whitesmoke;
     display: flex;
-    width: 20%;
-    height: fit-content;
+    width: 300px; /* Set a fixed width for the cards */
     flex-direction: column;
     margin: 20px;
     border-radius: 5px;
     padding: 20px;
     transition: 0.3s ease-in-out;
-    overflow: scroll;
-    
-    
+    overflow: hidden; /* Hide overflow instead of scroll */
 }
 
 ::-webkit-scrollbar {
     width: 0px; 
-  }
-  
-  
-  ::-webkit-scrollbar-track {
-    background:transparent 
-  }
-  
- 
-  
- 
-.project-img
-{
-    width: 100%;
-    
-    height: fit-content;
 }
-.project1:hover{
+
+::-webkit-scrollbar-track {
+    background:transparent 
+}
+
+.project-img {
+    width: 100%;
+    height: auto; /* Change fit-content to auto */
+}
+
+.project1:hover {
     transform: scale(1.1);
     background: #ddd;
 }
 
-
-.image img
-{
+.image img {
     width: 100%;
     border-radius: 10px;
 }
-.project-name
-{
+
+.project-name {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     font-size: 10px;
     justify-content: space-between;
 }
-.project-link
-{
+
+.project-link {
     display: flex;
     gap: 20px;
 }
-.project-name a{ 
+
+.project-name a { 
     font-size: 25px;
     font-weight: 900;
     color: #000000;
     margin-top: 10px;
+}
+
+.project-content {
+    flex-grow: 1; /* Make the content area grow to fill space */
 }
 
 /* .pro-img{
