--- a/src/component/portfolio/navbarStyles.css
+++ b/src/component/portfolio/navbarStyles.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(background.jpg);
+    background-image: url(../assests/background.jpg);
     background-attachment: fixed;
     width: 100%;
     height: 100vh;
